--- a/modules/ROOT/partials/configuration/icon_list.adoc
+++ b/modules/ROOT/partials/configuration/icon_list.adoc
@@ -59,7 +59,7 @@
 | `+embed+` | image:icons/embed.svg[embed.svg] | `+embed.svg+`
 | `+emoji+` | image:icons/emoji.svg[emoji.svg] | `+emoji.svg+`
 | `+export+` | image:icons/export.svg[export.svg] | `+export.svg+`
-| `+export-pdf+` | image:icons/export-pfd.svg[export-pfd.svg] | `+export-pfd.svg+`
+| `+export-pdf+` | image:icons/export-pdf.svg[export-pdf.svg] | `+export-pdf.svg+`
 | `+fill+` | image:icons/fill.svg[fill.svg] | `+fill.svg+`
 | `+flip-horizontally+` | image:icons/flip-horizontally.svg[flip-horizontally.svg] | `+flip-horizontally.svg+`
 | `+flip-vertically+` | image:icons/flip-vertically.svg[flip-vertically.svg] | `+flip-vertically.svg+`
