--- a/modules/ROOT/partials/configuration/icon_list.adoc
+++ b/modules/ROOT/partials/configuration/icon_list.adoc
@@ -74,6 +74,7 @@
 | `+horizontal-rule+` | image:icons/horizontal-rule.svg[horizontal-rule.svg] | `+horizontal-rule.svg+`
 | `+image-options+` | image:icons/image-options.svg[image-options.svg] | `+image-options.svg+`
 | `+image+` | image:icons/image.svg[image.svg] | `+image.svg+`
+| `+import-word+` | image:icons/import-word.svg[import-word.svg] | `+import-word.svg+`
 | `+indent+` | image:icons/indent.svg[indent.svg] | `+indent.svg+`
 | `+info+` | image:icons/info.svg[info.svg] | `+info.svg+`
 | `+insert-character+` | image:icons/insert-character.svg[insert-character.svg] | `+insert-character.svg+`
