--- a/modules/ROOT/partials/index-pages/premium-plugins.adoc
+++ b/modules/ROOT/partials/index-pages/premium-plugins.adoc
@@ -95,6 +95,12 @@ Turn {productname} documents into single files with inline CSS, ready, in partic
 
 a|
 [.lead]
+xref:importword.adoc[Import Word]
+
+Import `.docx` (Word documents) or `.dotx` (Word templates) files into the editor.
+
+a|
+[.lead]
 xref:linkchecker.adoc[Link Checker]
 
 Validate links, as they are typed.
