--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -308,6 +308,7 @@
 *** xref:export.adoc[Export]
 *** xref:footnotes.adoc[Footnotes]
 *** xref:formatpainter.adoc[Format Painter]
+*** xref:importword.adoc[Import Word]
 *** xref:inline-css.adoc[Inline CSS]
 *** xref:linkchecker.adoc[Link Checker]
 *** xref:mentions.adoc[Mentions]
