DOC-2267: add note for self-hosted customers.

--- a/modules/ROOT/pages/importword.adoc
+++ b/modules/ROOT/pages/importword.adoc
@@ -13,6 +13,9 @@
 
 include::partial$misc/admon-premium-plugin.adoc[]
 
+[NOTE]
+This feature is currently **only available** for sales managed `self-hosted` customers. A cloud-based option for self-served customers will be available in 2024.
+
 // uncomment this before merging.
 ////
 include::partial$misc/admon-requires-7.0v.adoc[]
