--- a/modules/ROOT/partials/configuration/importword.adoc
+++ b/modules/ROOT/partials/configuration/importword.adoc
@@ -5,10 +5,7 @@ This option is used for setting the URL endpoint for the conversion service.
 
 [IMPORTANT]
 If this string value is **not configured** it will return a console.error:
-_The {pluginname} plugin requires the `importword_service_url` to be configured_.
-
-If the editor detects an `invalid_URL`, it will return a console.error:
-_The value provided in `importword_service_url` is not a valid URL_.
+_The {pluginname} plugin requires the `importword_service_url` to be configured_. If the editor detects an `invalid_URL`, it will return a console.error: _The value provided in `importword_service_url` is not a valid URL_.
 
 *Type:* `+String+`
 
