DOC-1901: Remove RTC from TinyMCE 7.0 Documentation project.

--- a/modules/ROOT/pages/editor-model.adoc
+++ b/modules/ROOT/pages/editor-model.adoc
@@ -2,7 +2,7 @@
 :navtitle: Editor content models
 :description: Configure the editor's content model.
 
-WARNING: {productname} model configuration is a future feature. The only supported models are the default (`+dom+`) and the one provided by the premium https://www.tiny.cloud/tinymce/features/real-time-collaboration/[Real-time Collaboration] feature. These options exist only for use in scenarios where the `dom` model cannot load automatically.
+WARNING: {productname} model configuration is a future feature. The only supported model is the default (`+dom+`) feature. This option exist only for use in scenarios where the `dom` model cannot load automatically.
 
 include::partial$configuration/model.adoc[]
 
