--- a/modules/ROOT/pages/7.0-release-notes.adoc
+++ b/modules/ROOT/pages/7.0-release-notes.adoc
@@ -107,25 +107,29 @@ This release introduces a new `trigger` property for block text pattern configur
 
 In {productname} 7.0 the default preconfigured text patterns **was changed from**:
 
+[[example-preconfigured-text-patterns-prior-to-TinyMCE-7.0]]
+.Example preconfigured text_patterns prior to {productname} 7.0
 [source, js]
 ----
-[     
+[
   { start: '*', end: '*', format: 'italic' },
   { start: '**', end: '**', format: 'bold' },
-  { start: '#', format: 'h1', trigger: 'enter' },
-  { start: '##', format: 'h2', trigger: 'enter' },
-  { start: '###', format: 'h3', trigger: 'enter' },
-  { start: '####', format: 'h4', trigger: 'enter' },
-  { start: '#####', format: 'h5', trigger: 'enter' },
-  { start: '######', format: 'h6', trigger: 'enter' },
-  { start: '1. ', cmd: 'InsertOrderedList', trigger: 'enter' },
-  { start: '* ', cmd: 'InsertUnorderedList', trigger: 'enter' },
-  { start: '- ', cmd: 'InsertUnorderedList', trigger: 'enter' },
+  { start: '#', format: 'h1' },
+  { start: '##', format: 'h2' },
+  { start: '###', format: 'h3' },
+  { start: '####', format: 'h4' },
+  { start: '#####', format: 'h5' },
+  { start: '######', format: 'h6' },
+  // The following text patterns require the `lists` plugin
+  { start: '1. ', cmd: 'InsertOrderedList' },
+  { start: '* ', cmd: 'InsertUnorderedList' },
+  { start: '- ', cmd: 'InsertUnorderedList' }
 ]
 ----
 
-**to the following**:
+to the following new preconfigured defaults:
 
+.Example preconfigured text_patterns for {productname} 7.0+
 [source, js]
 ----
 [     
@@ -145,7 +149,8 @@ In {productname} 7.0 the default preconfigured text patterns **was changed from*
 ]
 ----
 
-Notice that new configuration of start prefixes for inserting lists doesn’t contain space character.
+[NOTE]
+The new pre configuration for the `start` prefixes for inserting lists no longer contains a `space` character.
 
 [source, js]
 ----
@@ -156,11 +161,13 @@ Notice that new configuration of start prefixes for inserting lists doesn’t co
 ----
 
 [IMPORTANT]
-Customers that wish to revert back to the previous default block `text_patterns` settings will be required to replace `trigger: 'space'` with `trigger: 'enter'` for the trigger value.
+Customers that wish to revert back to the previous default block `text_patterns` settings will be required to replace the preconfigured text_patterns with the xref:7.0-release-notes.adoc#example-preconfigured-text-patterns-prior-to-TinyMCE-7.0[old defaults].
 
-[NOTE]
+[TIP]
 The trigger property is exclusively applicable to the configuration of block text patterns. It is not recognized in the configurations for inline and replacement text patterns.
 Incorporating new text patterns into the preconfigured set requires the inclusion of default values. This is essential because the entire `text_patterns` option will be overwritten, and without the default values, the original configuration will not be preserved.
+
+For information on the **text_patterns**, see xref:content-behavior-options.adoc#text_patterns[Text Patterns]
 
 
 [[additions]]
