--- a/modules/ROOT/pages/7.0-release-notes.adoc
+++ b/modules/ROOT/pages/7.0-release-notes.adoc
@@ -107,15 +107,16 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 === <TINY-9638 changelog entry name>
 // #TINY-9638
 
-Previously when using xref:autocompleter.adoc[Autocompleter], the native browser tooltip would be shown on mouse hover, but not on keyboard focus.
+Previously when using xref:autocompleter.adoc[Autocompleter], the native browser tooltip was only shown on mouse hover, but not on keyboard focus.
 
-This means that keyboard only users would not be able to see the tooltip, as it would only be shown on mouse hover.
+This means that keyboard-only users were not able to see the tooltip, as it was only shown on mouse hover.
 
-To address this in {productname} 7.0, custom tooltips have been implemented for `autocompleter`.
+To address this in {productname} 7.0, custom tooltips have been implemented for `autocompleter` items.
 
-Now, tooltips will now be shown on `autocompleter` items, on mouse over and keyboard focus, providing visual indication for keyboard only users.
+Now, tooltips are now shown on `autocompleter` items both on mouse over and keyboard focus, providing visual indication for keyboard-only users.
 
-Note: Tooltip will only be shown when the autocompleter columns is not set to 1, as there will be a visible label, so tooltip functionality is omitted.
+[NOTE]
+The tooltip will only be displayed when the `autocompleter` columns are set to a value greater than `1`. This is because when there is a visible label, the tooltip functionality is not needed and therefore omitted.
 
 [[additions]]
 == Additions
