--- a/modules/ROOT/pages/migration-from-6x.adoc
+++ b/modules/ROOT/pages/migration-from-6x.adoc
@@ -162,6 +162,8 @@ default: [
 ]
 ----
 
+For information on the **text_patterns**, see xref:content-behavior-options.adoc#text_patterns[Text Patterns]
+
 [[plugins]]
 == Plugins
 
