--- a/modules/ROOT/pages/migration-from-6x.adoc
+++ b/modules/ROOT/pages/migration-from-6x.adoc
@@ -142,7 +142,7 @@ Applying basic formats such as headings, lists, bold and italic while typing are
 {productname} 7 introduces changes to the default behavior for `text-patterns` so that on **Space** key the editor triggers a xref:modules/ROOT/partials/configuration/text_patterns.adoc#block-patterns[block pattern] rather then on `Enter` key press.
 
 [NOTE]
-Customers who want to keep the old behavior need to update their config with the text pattern option using enter as trigger key.
+Customers that wish to revert back to the previous default block `text_patterns` execution on `Enter` key pressing will be required to replace the preconfigured text_patterns. See more xref:7.0-release-notes.adoc#a-new-trigger-property-for-block-text-pattern-configurations-allowing-pattern-activation-with-either-space-or-enter-keys[7.0 Release notes]
 
 .Updated default text patterns
 [source, ts]
