--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -411,6 +411,7 @@
 **** xref:7.0-release-notes.adoc#overview[Overview]
 **** xref:7.0-release-notes.adoc#new-premium-plugin<s>[New Premium plugin<s>]
 **** xref:7.0-release-notes.adoc#new-open-source-plugin<s>[New Open Source plugin<s>]
+**** xref:7.0-release-notes.adoc#new-non-open-source-plugin[New Non Open Source plugin]
 **** xref:7.0-release-notes.adoc#accompanying-premium-plugin-changes[Accompanying Premium plugin changes]
 **** xref:7.0-release-notes.adoc#accompanying-premium-plugin-end-of-life-announcement[Accompanying Premium plugin end-of-life announcement]
 **** xref:7.0-release-notes.adoc#accompanying-open-source-plugin-end-of-life-announcement[Accompanying open source plugin end-of-life-announcement]
