--- a/modules/ROOT/pages/7.0-release-notes.adoc
+++ b/modules/ROOT/pages/7.0-release-notes.adoc
@@ -13,8 +13,9 @@ include::partial$misc/admon-releasenotes-for-stable.adoc[]
 
 // Remove sections and section boilerplates as necessary.
 // Pluralise as necessary or remove the placeholder plural marker.
-* xref:new-premium-plugin<s>[New Premium plugin<s>]
-* xref:new-open-source-plugin<s>[New Open Source plugin<s>]
+* xref:new-premium-plugin<s>[New Premium plugins]
+* xref:new-open-source-plugin<s>[New Open Source plugin]
+* xref:new-non-open-source-plugin[New Non Open Source plugin]
 * xref:accompanying-premium-plugin-changes[Accompanying Premium plugin changes]
 * xref:accompanying-premium-plugin-end-of-life-announcement[Accompanying Premium plugin end-of-life announcement]
 * xref:accompanying-open-source-plugin-end-of-life-announcement[Accompanying open source plugin end-of-life-announcement]
@@ -50,6 +51,20 @@ The following new Open Source plugin was released alongside {productname} <x.y[.
 The new open source plugin, **<Open source plugin name>** // description here.
 
 For information on the **<Open source plugin name>** plugin see xref:<plugincode>.adoc[<Open source plugin name>].
+
+[[new-non-open-source-plugin]]
+== New Non Open Source plugin
+
+The following new non-open-source plugin was released alongside {productname} 7.0.
+
+include::partial$misc/admon-non-open-source-plugin-statement.adoc[]
+
+[[non-open-source-plugin-markdown]]
+=== Markdown
+
+The new non-open-source plugin, **Markdown** plugin detects pure markdown from a paste event within a {productname} editor instance.
+
+For information on the **Markdown** plugin see xref:markdown.adoc[Markdown].
 
 
 [[accompanying-premium-plugin-changes]]
