DOC-2270_TINY-10482 release notes entry: Inline mode with persisted toolbar would show regardless of the skin being loaded, causing css issues. (#3086)
* DOC-2270_TINY-10482 release notes entry: Inline mode with persisted toolbar would show regardless of the skin being loaded, causing css issues.

* Update modules/ROOT/pages/7.0-release-notes.adoc

Co-authored-by: Daniel Oakman <141111365+danoaky-tiny@users.noreply.github.com>

---------

Co-authored-by: Karl Kemister-Sheppard <karlkemistersheppard@gmail.com>
Co-authored-by: Daniel Oakman <141111365+danoaky-tiny@users.noreply.github.com>

--- a/modules/ROOT/pages/7.0-release-notes.adoc
+++ b/modules/ROOT/pages/7.0-release-notes.adoc
@@ -225,6 +225,25 @@ As a consequence, the additional rows in the wrapped toolbar would cover the edi
 
 As a result, the truncated toolbar is correctly displayed above the editor content.
 
+=== Inline mode with persisted toolbar would show regardless of the skin being loaded, causing css issues.
+// #TINY-10482
+
+Previously when `toolbar_persist` and `inline` mode was set to `true`, the toolbar could be shown before the skin was loaded. Whereas now it will always wait for the skin to load first.
+
+.example setup
+[source, js]
+----
+tinymce.init({
+  selector: "div",
+  inline: true,
+  toolbar_persist: true
+});
+----
+
+As a consequence, this would result in the menubar and/or the toolbar to be squashed when the host browser was operating over a relatively slow connection.
+
+{productname} 7.0 addresses this issue, now, the toolbar is no longer squashed in `inline` mode with `toolbar_persist` enabled, when the page takes longer to load the skin.
+
 [[security-fixes]]
 == Security fixes
 
